# aleph_ollama

./: Cargo.toml  LICENSE  README.md
examples/basic/: main.rs
examples/basic_string/: main.rs
src/: lib.rs
test/dataset/: bubbleSort.py  fibonacci.ale  syracuse.ml
