[package]
name = "aleph_ollama"
version = "0.1.3"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/aleph-lang/aleph_ollama"
description="Aleph Ollama Code Translator."


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lib]
name = "aleph_ollama"
path = "src/lib.rs"
